Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,21 +3,36 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group afiniate
 	owner = group user/Eric Merritt (ericbmerritt)
 [access "refs/for/refs/*"]
+	read = group afiniate
 	read = group user/Eric Merritt (ericbmerritt)
+	push = group afiniate
 	push = group user/Eric Merritt (ericbmerritt)
+	label-Code-Review = -2..+2 group afiniate
 	label-Code-Review = -2..+2 group user/Eric Merritt (ericbmerritt)
+	label-Verified = -1..+1 group afiniate
 	label-Verified = -1..+1 group user/Eric Merritt (ericbmerritt)
+	rebase = group afiniate
 	rebase = group user/Eric Merritt (ericbmerritt)
+	removeReviewer = group afiniate
 	removeReviewer = group user/Eric Merritt (ericbmerritt)
+	submit = group afiniate
 	submit = group user/Eric Merritt (ericbmerritt)
 [access "refs/heads/*"]
+	read = group afiniate
 	read = group user/Eric Merritt (ericbmerritt)
+	create = group afiniate
 	create = group user/Eric Merritt (ericbmerritt)
+	push = group afiniate
 	push = +force group user/Eric Merritt (ericbmerritt)
+	pushMerge = group afiniate
 	pushMerge = group user/Eric Merritt (ericbmerritt)
 [access "refs/tags/*"]
+	push = group afiniate
 	push = +force group user/Eric Merritt (ericbmerritt)
+	pushTag = group afiniate
 	pushTag = group user/Eric Merritt (ericbmerritt)
+	pushSignedTag = group afiniate
 	pushSignedTag = group user/Eric Merritt (ericbmerritt)
